# bpm-release

./: .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  WORKSPACE  bazelify.sh  runc_filename.tar.xz
.final_builds/jobs/bpm/: index.yml
.final_builds/jobs/bpm-test-agent/: index.yml
.final_builds/jobs/test-errand/: index.yml
.final_builds/jobs/test-server/: index.yml
.final_builds/license/: index.yml
.github/workflows/: go.yml
bosh/: BUILD.bazel
bosh/jobs/bpm/: BUILD.bazel  spec
bosh/jobs/bpm/templates/: setup.erb
bosh/jobs/test-server/: BUILD.bazel  spec
bosh/jobs/test-server/templates/: bpm.yml.erb
bosh/manifests/: bosh-lite.yml
bpm/: BUILD.bazel
bpm/acceptance/: .gitignore  BUILD.bazel  bpm_acceptance_suite_test.go
bpm/acceptance/fixtures/test-server/: BUILD.bazel  main.go
bpm/acceptance/fixtures/test-server/handlers/: BUILD.bazel
bpm/cgroups/: BUILD.bazel  cgroup_test.go  cgroups_suite_test.go
bpm/cmd/bpm/: BUILD.bazel
bpm/commands/: BUILD.bazel  list.go  logs.go  root.go  run.go  shell.go  start.go  stop.go  version.go
bpm/config/: BUILD.bazel  bosh.go  bosh_test.go  bpm_config.go  job_config.go
bpm/config/fixtures/: example-invalid-yaml.yml  example.yml
bpm/exitstatus/: BUILD.bazel
bpm/integration/: BUILD.bazel  bash_test.go  logs_test.go  namespaces_test.go  pid_test.go  privileged_test.go  version_test.go
bpm/integration2/: BUILD.bazel
bpm/integration2/testdata/: errand.yml  failure.yml
bpm/models/: BUILD.bazel
bpm/mount/: BUILD.bazel  mountutil_test.go
bpm/mount/fixtures/: mount
bpm/presenters/: BUILD.bazel  presenters_suite_test.go
bpm/runc/adapter/: BUILD.bazel  adapter.go  adapter_suite_test.go  adapter_test.go  seccomp.go
bpm/runc/client/: BUILD.bazel
bpm/runc/lifecycle/: BUILD.bazel  lifecycle.go  lifecycle_test.go
bpm/runc/lifecycle/lifecyclefakes/: BUILD.bazel  fake_command_runner.go  fake_runc_adapter.go  fake_runc_client.go  fake_user_finder.go
bpm/runc/specbuilder/: BUILD.bazel  capabilities.go  specbuilder.go
bpm/sysfeat/: BUILD.bazel
bpm/usertools/: BUILD.bazel  finder.go
ci/: Dockerfile  bump-blob.yml  bump-local-version.yml  bump-submodules.yml  configure.sh  create-rc.yml  create-release.yml  finalize-release.yml  pipeline.yml  test-acceptance.yml  test-runc-update.yml  test-unit.yml  test-upgrade.yml  test.yml
ci/pipelines/: bpm.yml  configure.sh  update.sh
ci/scripts/: bump-blob  bump-local-version  bump-submodules  create-rc  create-release  finalize-release
ci/tasks/: bump-deps.sh  bump-deps.yml  bump-golang-package.sh  bump-golang-package.yml  bump-gperf-package.sh  bump-gperf-package.yml  bump-libseccomp-package.sh  bump-libseccomp-package.yml  bump-local-version.yml  bump-pkgconf-package.sh  bump-pkgconf-package.yml  bump-runc-package.sh  bump-runc-package.yml  bump-tini-package.sh  bump-tini-package.yml  bumps-deps-copy.sh  bumps-deps.sh  bumps-deps.yml  test-acceptance.yml  test-bosh-deployment.sh  test-bosh-deployment.yml  test-upgrade.yml  use-dev-release-ops-file.yml
config/: blobs.yml  final.yml
docs/: bpm.md  config.md  public_interface.md  runtime.md  transitioning.md  transitioning_bbr_scripts.md  undefined.md
docs/internal/: releasing.md
docs/proposals/: cpulimit.md  no_stress_mitigation.txt  no_stress_no_mitigation.txt  privileged.md  stress_mitigation.txt  stress_no_mitigation.txt
example-manifests/: bbl.yml  bosh-lite-ci.yml  bosh-lite.yml
jobs/bpm/: spec
jobs/bpm-test-agent/: monit  spec
jobs/bpm-test-agent/templates/: alt-server.yml.erb  bpm-test-agent.yml.erb  bpm.yml.erb  server.yml.erb
jobs/bpm/templates/: bpm  pre-start.erb  setup.erb
jobs/crucible/: spec
jobs/crucible-acceptance/: monit  spec
jobs/crucible-acceptance/templates/: crucible.yml.erb
jobs/crucible-test-agent/: monit  spec
jobs/crucible-test-agent/templates/: alt-server.yml.erb  crucible.yml.erb  server.yml.erb
jobs/crucible/templates/: pre-start.erb  setup.erb
jobs/test-errand/: spec
jobs/test-errand/templates/: bpm.yml.erb  run.sh
jobs/test-server/: monit
jobs/test-server/templates/: bpm.yml.erb
manifests/: bbl.yml  bosh-lite-ci.yml  bosh-lite.yml
operations/: capi.yml  diego-lite.yml  diego.yml  instance-identity.yml  uaa.yml
releases/bpm/: bpm-0.1.0-rc.10.yml  bpm-0.1.0-rc.11.yml  bpm-0.1.0-rc.7.yml  bpm-0.1.0-rc.8.yml  bpm-0.1.0-rc.9.yml  bpm-0.1.0.yml  bpm-0.10.0.yml  bpm-0.11.0.yml  bpm-0.12.0.yml  bpm-0.12.1.yml  bpm-0.12.2.yml  bpm-0.12.3.yml  bpm-0.13.0.yml  bpm-0.2.0.yml  bpm-0.3.0.yml  bpm-0.4.0.yml  bpm-0.5.0.yml  bpm-0.6.0.yml  bpm-0.7.0.yml  bpm-0.7.1.yml  bpm-0.8.0.yml  bpm-0.9.0.yml  bpm-1.0.0.yml  bpm-1.0.1.yml  bpm-1.0.2.yml  bpm-1.0.3.yml  bpm-1.0.4.yml  bpm-1.1.0.yml  bpm-1.1.1.yml  bpm-1.1.10.yml  bpm-1.1.11.yml  bpm-1.1.12.yml  bpm-1.1.13.yml  bpm-1.1.14.yml  bpm-1.1.15.yml  bpm-1.1.16.yml  bpm-1.1.17.yml  bpm-1.1.18.yml  bpm-1.1.19.yml  bpm-1.1.2.yml  (+76 more)
scripts/: bosh-lite-acceptance-test  checkdocker.sh  go-generate  mountgroups.sh  release.sh  reload-bpm  run-acceptance-specs  start-crucible-docker  start-crucible-test-agent  start-docker  start-test-agent  sync-package-specs  sync-submodule-config  test  test-acceptance  test-runc-update  test-unit  test-upgrade  test-with-concourse  test-with-docker
src/: runc-tmpfs-change-path.patch  version
src/bpm/: .gitignore  Gopkg.toml  bpm_suite_test.go  go.mod  go.sum  license_test.go  main.go  main_suite_test.go  main_test.go
src/bpm-acceptance/: bpm_acceptance_suite_test.go  bpm_acceptance_test.go
src/bpm/acceptance/: bpm_acceptance_suite_test.go  bpm_acceptance_test.go
src/bpm/bosh/: bosh_suite_test.go  env.go  env_test.go  paths.go  paths_test.go
src/bpm/bpm/: config.go  config_suite_test.go  config_test.go
src/bpm/cgroups/: cgroup.go  cgroup_test.go  cgroups_suite_test.go
src/bpmlicensecheck/: bpmlicencecheck_suite_test.go  check.go  check_test.go
src/crucible/: .gitignore  crucible_suite_test.go  main.go  main_test.go
src/crucible-acceptance/: crucible_acceptance_suite_test.go  crucible_acceptance_test.go
(+201 files in other folders)
