load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "bpm_acceptance_suite_test.go",
        "bpm_acceptance_test.go",
    ],
    tags = ["manual"],
    deps = [
        "//bpm/vendor/github.com/onsi/ginkgo:go_default_library",
        "//bpm/vendor/github.com/onsi/gomega:go_default_library",
    ],
)
