load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["error.go"],
    importpath = "bpm/exitstatus",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["error_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//bpm/vendor/github.com/onsi/ginkgo:go_default_library",
        "//bpm/vendor/github.com/onsi/gomega:go_default_library",
    ],
)
