load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "bpm/cmd/bpm",
    visibility = ["//visibility:private"],
    deps = [
        "//bpm/commands:go_default_library",
        "//bpm/exitstatus:go_default_library",
    ],
)

go_binary(
    name = "bpm",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)
