load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "bpm/runc/client",
    visibility = ["//visibility:public"],
    deps = ["//bpm/vendor/github.com/opencontainers/runtime-spec/specs-go:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "client_suite_test.go",
        "client_test.go",
    ],
    embed = [":go_default_library"],
    tags = ["manual"],
    deps = [
        "//bpm/vendor/github.com/onsi/ginkgo:go_default_library",
        "//bpm/vendor/github.com/onsi/gomega:go_default_library",
        "//bpm/vendor/github.com/opencontainers/runtime-spec/specs-go:go_default_library",
    ],
)
